# NewsScraper

./: .black  .env  .gitignore  Dockerfile  Procfile  README.md  Scraper.py  article_quality.py  backfill_bias.py  celery_worker.py  cleanup_articles.py  feed_data.py  filter_user_extras.py  headline_scraper.py  keyword_extractor.py  libraries-install.txt  lookup_worthy.json  main.py  news_scraper.py  news_sites.json  news_sites.py  package-lock.json  political_bias.py  pyproject.toml  requirements-ml.txt  requirements.txt  save2db.py  scheduled_tasks.py  selector_scraper.py  selenium_scraper.py  sentiment_analysis_pipeline.py  sentiment_analyzer.py  sentiment_api.py  sentiment_results.json  simple_parsing.py  test.py  test_article_cleanup.py  test_political_bias.py  user_extras.json
.github/workflows/: scrape-news.yml
